--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
     "start": "npx rjs serve",
     "start:prod": "npm run start",
     "start:dev": "npm run start -- -D"
+  },
+  "dependencies": {
+    "@plugins.rapidjs.org/iconfont": "github:rapidjs-org/plugin--iconfont",
+    "@plugins.rapidjs.org/pageframe": "github:rapidjs-org/plugin--pageframe",
+    "@plugins.rapidjs.org/scss": "github:rapidjs-org/plugin--scss"
   }
 }
